--- a/project.html
+++ b/project.html
@@ -8,7 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
-  <script src="scripts/scripts.js" defer></script>
 </head>
 
 <body>
@@ -33,6 +32,7 @@
       <div class="wind">Wind speed: 6.2 km/h</div>
     </div>
   </div>
+  <script src="scripts/scripts.js"></script>
 </body>
 
 </html>
