--- a/project.html
+++ b/project.html
@@ -7,10 +7,12 @@
   <title>Weather App</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/styles.css">
+   <link rel="stylesheet" href="styles/styles.css">
+  
 </head>
 
 <body>
+    <div class="nav"> <a href="w05-task.html"> W5 Task </a> </div> 
   <div class="card">
     <div class="search">
       <input type="text" class="search-bar" placeholder="Search">
@@ -30,6 +32,7 @@
       </div>
       <div class="humidity">Humidity: 60%</div>
       <div class="wind">Wind speed: 6.2 km/h</div>
+      <div class="current-time" id="year"> </div>
     </div>
   </div>
   <script src="scripts/scripts.js"></script>
